chore(config): 调整docker-compose配置和应用配置
- 注释掉RabbitMQ的数据和日志挂载卷配置
- 为Nacos新增客户端和服务端gRPC通信端口映射
- 保持Swagger UI的doc-expansion配置不变
- 更新api-docs路径配置保持一致

--- a/document/docker/docker-compose-env.yml
+++ b/document/docker/docker-compose-env.yml
@@ -33,9 +33,10 @@ services:
   rabbitmq:
     image: rabbitmq:3.9.11-management
     container_name: rabbitmq
-    volumes:
-      - /mydata/rabbitmq/data:/var/lib/rabbitmq #数据文件挂载
-      - /mydata/rabbitmq/log:/var/log/rabbitmq #日志文件挂载
+#    调试不需要
+#    volumes:
+#      - /mydata/rabbitmq/data:/var/lib/rabbitmq #数据文件挂载
+#      - /mydata/rabbitmq/log:/var/log/rabbitmq #日志文件挂载
     ports:
       - 5672:5672
       - 15672:15672
@@ -94,3 +95,5 @@ services:
       - "MODE=standalone"
     ports:
       - 8848:8848
+      - 9848:9848  # ✅ 新增：客户端 gRPC 通信端口
+      - 9849:9849  # ✅ 新增：服务端 gRPC 通信端口
