--- a/document/docker/docker-compose-env.yml
+++ b/document/docker/docker-compose-env.yml
@@ -25,9 +25,9 @@ services:
     image: nginx:1.22
     container_name: nginx
     volumes:
-      - /mydata/nginx/conf:/etc/nginx #配置文件挂载
-      - /mydata/nginx/html:/usr/share/nginx/html #静态资源根目录挂载
-      - /mydata/nginx/log:/var/log/nginx #日志文件挂载
+      - ../nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+      - ../nginx/log:/var/log/nginx
+      - ../nginx/html:/usr/share/nginx/html
     ports:
       - 80:80
   rabbitmq:
