chore(config): 更新Redis端口和Nacos配置
- 将Redis端口从6379更改为16379
- 更新Nacos服务地址端口从848更改为28848
- 为Nacos配置添加用户名和密码认证信息
- 在生产环境配置中将Nacos端口从8848更改为18848

--- a/mall-auth/src/main/resources/bootstrap-dev.yml
+++ b/mall-auth/src/main/resources/bootstrap-dev.yml
@@ -2,10 +2,12 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: http://localhost:8848
+        server-addr: localhost:28848
+        username: nacos          # 必须加上
+        password: nacos          # 必须加上
+        # 如果你之前在 Docker 环境变量里改了密码，这里填你改后的
       config:
-        server-addr: http://localhost:8848
+        server-addr: localhost:28848
+        username: nacos
+        password: nacos
         file-extension: yaml
-logging:
-  level:
-    root: debug
